[package]
name = "nteract-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = [ "rt", "rt-multi-thread", "sync", "fs", "io-util" ] }
zeromq = { version = "0.3.4", features = ["tcp-transport", "tokio-runtime"] }
serde_json = "1.0"
ulid = "1.1.0"
log = "0.4.20"
env_logger = "0.10.1"
kernel-sidecar = "0.1.0"

[target.'cfg(windows)'.dependencies.zeromq]
version = "=0.3.4"
default-features = false
features = ["tcp-transport", "tokio-runtime"]


[target.'cfg(unix)'.dependencies.zeromq]
version = "=0.3.4"
default-features = false
features = ["ipc-transport", "tcp-transport", "tokio-runtime"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
